# football_book_code

./: .gitignore  00_preface.ipynb  01_Football_Analytics.ipynb  02_Exploratory_Data_Analysis.ipynb  03_Simple_Linear_Regression.ipynb  04_Multiple_Regression.ipynb  05_Generalized_Linear_Models.ipynb  06_Using_Data_Science_for_Sports_Betting.ipynb  08_Principal_Component_Analysis_and_Clustering.ipynb  loader.py  pyproject.toml
